<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseToSolvesActivity"
    android:id="@+id/container_toSolves">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_toSolves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <Button
        android:id="@+id/button_saveToSolves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:background="?attr/colorAccent"
        android:onClick="button_saveToSolvesClicked"
        android:text="@string/text_button_saveSettings"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationY="600dp" />

    <SeekBar
        android:id="@+id/seekBar_difficulty"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:max="10"
        android:min="1"
        android:onClick="seekBar_difficultyClicked"
        android:scaleX="2"
        android:scaleY="2"
        android:translationY="100dp" />

    <SeekBar
        android:id="@+id/seekBar_number_of_toSolves"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:max="10"
        android:min="1"
        android:onClick="seekBar_numberClicked"
        android:scaleX="2"
        android:scaleY="2"
        android:translationY="250dp" />

    <TextView
        android:id="@+id/tv_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_difficulty"
        android:textSize="20sp"
        android:translationX="5dp"
        android:translationY="100dp" />

    <TextView
        android:id="@+id/tv_number_of_toSolves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_number_of_toSolves"
        android:textSize="20sp"
        android:translationX="5dp"
        android:translationY="250dp" />

    <TextView
        android:id="@+id/tv_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_example"
        android:textAlignment="center"
        android:textSize="34sp"
        android:translationY="400dp" />

    <TextView
        android:id="@+id/tv_example_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="---"
        android:textAlignment="center"
        android:textSize="34sp"
        android:translationY="450dp" />


</RelativeLayout>