<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:id="@+id/container_settings" >

    <TextView
        android:id="@+id/tv_textScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/text_textScale"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationY="305dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Switch
        android:id="@+id/switch_24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal|center_horizontal"
        android:gravity="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/text_switch_24h"
        android:translationX="10dp"
        android:translationY="100dp" />

    <Switch
        android:id="@+id/switch_nightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal|center_horizontal"
        android:gravity="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/text_switch_nightMode"
        android:translationX="10dp"
        android:translationY="160dp" />

    <Switch
        android:id="@+id/switch_reducedMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal|center_horizontal"
        android:gravity="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/text_switch_reducedMode"
        android:translationX="10dp"
        android:translationY="220dp" />

    <Button
        android:id="@+id/button_saveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:background="?attr/colorAccent"
        android:onClick="button_saveSettings_Clicked"
        android:text="@string/text_button_saveSettings"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationY="595dp" />

    <SeekBar
        android:id="@+id/seekBar_textScale"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:max="3"
        android:progress="0"
        android:scaleX="2"
        android:scaleY="2"
        android:translationY="345dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="|"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="-38dp"
        android:translationY="365dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="|"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="38dp"
        android:translationY="365dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="|"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="120dp"
        android:translationY="365dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="|"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="-120dp"
        android:translationY="365dp" />

    <TextView
        android:id="@+id/tv_scale_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="1.1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="-38dp"
        android:translationY="380dp" />

    <TextView
        android:id="@+id/tv_scale_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="1.2"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="38dp"
        android:translationY="380dp" />

    <TextView
        android:id="@+id/tv_scale_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="1.3"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="120dp"
        android:translationY="380dp" />

    <TextView
        android:id="@+id/tv_scale_1_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="1.0"
        android:textAlignment="center"
        android:textStyle="bold"
        android:translationX="-120dp"
        android:translationY="380dp" />

    <View
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/atheneos_DarkGrey"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:translationX="-80dp"
        android:translationY="445dp" />


    <View
        android:id="@+id/primaryColour"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="?attr/colorAccent"
        android:onClick="primaryColourClicked"
        android:translationX="-80dp"
        android:translationY="445dp" />


    <View
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/atheneos_DarkGrey"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:translationX="80dp"
        android:translationY="445dp" />


    <View
        android:id="@+id/secondaryColour"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/atheneos_LightGrey"
        android:onClick="secondaryColourClicked"
        android:translationX="80dp"
        android:translationY="445dp" />


    <TextView
        android:id="@+id/tv_prim_col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/text_primaryColour"
        android:textStyle="bold"
        android:translationX="-80dp"
        android:translationY="545dp" />

    <TextView
        android:id="@+id/tv_sec_col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/text_secondaryColour"
        android:textStyle="bold"
        android:translationX="80dp"
        android:translationY="545dp" />

    <TextView
        android:id="@+id/tv_reset"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:height="50dp"
        android:gravity="center"
        android:onClick="resetClicked"
        android:text="RESET"
        android:textAlignment="center"
        android:textColor="@color/atheneos_ContrastGrey"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationY="670dp" />

</android.support.design.widget.CoordinatorLayout>